drkns 22.03.2020 13:47:01 +0200 - build 5573

1. Ещё на тему юникода и отладки.

drkns 22.03.2020 12:46:20 +0200 - build 5572

1. Пара уточнений 5571.

drkns 22.03.2020 01:25:01 +0200 - build 5571

1. 0003313: FCTL_SETPANELDIRECTORY not working for certain types of paths.

2. Результаты поиска могли иногда включать результаты предыдущего поиска.

3. Используются юникодные функции DbgHelp (если есть).

4. Рефакторинг.

MZK 11.03.2020 23:03:40 -0700

1. Перевёл на английский ещё несколько страниц справки far:config; почистил eng/TechInfo.txt.

drkns 11.03.2020 18:14:35 +0000 - build 5570

1. Немного магии для работы wow64 хука в VS2019.

2. Рефакторинг.

zg 10.03.2020 00:35:41 +0200 - build 5569

1. падение в SettingsControl, если в качестве названия настройки передать nullptr.

drkns 07.03.2020 22:21:15 +0000 - build 5568

1. Рефакторинг.

2. Больше тестов.

3. Продолжение 5567.

MZK 07.03.2020 12:45:31 -0800

1. Переработал страницу справки @System.CopySecurityOptions, английскую и русскую.

drkns 07.03.2020 18:03:21 +0000 - build 5567

1. С форума: начиная с билда 5527 стало тормозить открывание больших файлов редактором.

drkns 02.03.2020 22:55:22 +0000 - build 5566

1. Уточнение 5564.

drkns 02.03.2020 19:36:15 +0000 - build 5565

1. gh-221: Help for MkTemp is out of date or something is broken

drkns 01.03.2020 21:34:45 +0000 - build 5564

1. Рефакторинг.

drkns 24.02.2020 20:56:50 +0000 - build 5563

1. Рефакторинг.

2. Clang warnings.

zg 24.02.2020 14:44:36 +0200 - build 5562

1. уточнение 5561.

zg 18.02.2020 19:59:14 +0200 - build 5561

1. падение в FCTL_GETUSERSCREEN.

drkns 17.02.2020 18:09:59 +0000 - build 5560

1. С форума: UserMenu и мерцание панелей.

drkns 17.02.2020 01:36:09 +0000 - build 5559

1. Уточнение 5558.4.

drkns 15.02.2020 20:30:40 +0000 - build 5558

1. Убрано ручное переопределение приоритета.

2. Убрано добавление таблиц XLat из кода, для этого default.farconfig.

3. Выход за границу буфера при вставке в поле ввода с маской.
