@@ -3,6 +3,10 @@ This file is a translation of the main russian changelog and is provided by volu
 It might not always be as up to date as the main changelog.
 =======================================================================================
 
+drkns 22.03.2020 16:09:56 +0200 - build 5574
+
+1. Possible stack corruption when switching the main menu with a mouse.
+
 drkns 22.03.2020 13:47:01 +0200 - build 5573
 
 1. More about unicode & debugging.
