@@ -1,3 +1,7 @@
+drkns 22.03.2020 16:09:56 +0200 - build 5574
+
+1. Можно было испортить стек, переключая главное меню мышью.
+
 drkns 22.03.2020 13:47:01 +0200 - build 5573
 
 1. Ещё на тему юникода и отладки.
